# bgdev

./: CHANGELOG  MANIFEST.in  README.md  pyproject.toml  setup.cfg
docs/: .gitignore  index.rst
resources/maya/modules/: bgdev.txt
resources/maya/plug-ins/: edgeFlowMirror.py
resources/maya/scripts/: edgeFlowMirrorUI.py
resources/python27/PyYAML-5.3.1.dist-info/: RECORD
resources/python27/toml-0.10.1.dist-info/: RECORD
resources/python27/yamlordereddictloader-0.4.0.dist-info/: METADATA
resources/python3/scripts/PyYAML-6.0.dist-info/: RECORD
resources/python38/PyYAML-5.3.1.dist-info/: RECORD
src/apps-maya/mel/: js_cut_plane.mel
src/apps-maya/module/modules/: bgdev.txt
src/apps-maya/python/bgdev/: docstring.py  logger.py
src/bgdev/: __init__.py  cfg.py
src/bgdev/api/: attribute.py  blendshape.py  connection.py  core.py  deformer.py  mesh.py
src/bgdev/tools/: atom_import_export.py  blendshape_cluster.py  crosscopy.py  curve.py  mel2py.py  outliner_color.py  performance.py  pypredef.py  uniloop.py  vector_plane.py
src/bgdev/tools/pluginManager/: core.py
src/bgdev/tools/renamer/: __init__.py  core.py  ui.py  utils.py
src/bgdev/ui/: dock.py  flow_layout.py  progress_bar.py  utils.py  widgets.py
src/bgdev/utils/: attribute.py  bindpose.py  cleanup.py  color.py  constraints.py  contexts.py  controler.py  datatypes.py  deformer.py  display.py  history.py  hotkey.py  hotkey.yaml  joints.py  locators.py  mesh.py  modules.py  name.py  rivet.py  scripts.py  serialize.py  side.py  skincluster.py  sort.py  transform.py  vector.py  weightmap.py
(+68 files in other folders)
