[wheel]
universal = 1


[project]
repository_url = https://github.com/BenoitGielly/bgdev
project_name = bgdev
project_author = Benoit GIELLY
project_version = 1.0.0
project_src_dir =
    src/apps-python
    src/apps-maya/python

project_dependencies =

project_scripts =


[sphinx]
custom_syspath =
mock_modules = yaml numpy maya pymel qtpy shiboken2
member_order = alphabetical
